# amazon-kinesis-video-streams-webrtc-sdk-c

./: CMakeLists.txt  package.xml
samples/: kvsWebRTCClientMasterGstreamerSample.c
